some css gap fixes and oerall placement of mediaplayer #29

--- a/src/index.css
+++ b/src/index.css
@@ -9,26 +9,15 @@ body {
     margin-right: 8%;
 }
 
-.poemCont{
-    margin-top: 20%;
-    margin-bottom: 10%;
+#nav{
+    margin-bottom: 25px;
 }
-
-/*footer{
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
-    background-color: darkgrey;
-    color: white;
-    text-align: center;
-}*/
 
 /*Grid style*/
 .container {
     display: grid;
     grid-auto-flow: row;
+    margin-top: 5%;
     grid-gap: 5%;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     grid-template-rows: 50px 50px;
